# Langchain-Agente-Noticias

./: .gitignore
.cursor/plans/: interfaz_web_agente_noticias_80ce3494.plan.md
Agente IA Personal/: .env.example  README.md  langgraph.json  pyproject.toml
Agente IA Personal/agente_ia/: __init__.py  config.py  email_template.py  graph.py  prompts.py  schemas.py  state.py  studio.py
Agente IA Personal/agente_ia/nodes/: __init__.py  email_writer.py  evaluator.py  outlook_sender.py  ranker.py  researcher.py  summarizer.py
Agente IA Personal/scripts/: run.py
Agente Noticias/: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
Agente Noticias/agente_noticias/: __init__.py  _concurrency.py  concepts.py  config.py  db.py  email_template.py  graph.py  jokes.py  prompts.py  schemas.py  service.py  state.py  studio.py  text_utils.py
Agente Noticias/agente_noticias/assets/: README.md
Agente Noticias/agente_noticias/nodes/: __init__.py  email_writer.py  evaluator.py  history_filter.py  outlook_sender.py  persist_history.py  ranker.py  researcher.py  summarizer.py
Agente Noticias/agente_noticias/webapp/: __init__.py  app.py
Agente Noticias/agente_noticias/webapp/static/: app.js  index.html  styles.css
Agente Noticias/docs/: task_scheduler_setup.md
Agente Noticias/notebooks/: agente_noticias.ipynb
Agente Noticias/output/: preview.html
Agente Noticias/scripts/: run.py  run_scheduled.ps1  serve.py  studio.ps1
