[project]
name = "agente-noticias-win"
version = "0.1.0"
description = "Agente multi-nodo LangGraph que arma un briefing diario de IA relevante para Win Internet y lo envia por Outlook."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "langchain>=1.1.3",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.1",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "pydantic>=2.7",
    "python-dotenv>=1.2.0",
    "jinja2>=3.1",
    "pywin32>=306 ; sys_platform == 'win32'",
    "ipykernel>=7.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agente_noticias"]
