[project]
name = "agente-noticias-win"
version = "0.2.0"
description = "Agente multi-nodo LangGraph que arma un briefing semanal de noticias de IA (digeribles) para los directivos de Win Internet y lo envia por Outlook, con historial anti-repeticion en Supabase."
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "langchain>=1.1.3",
    "langchain-core>=1.3.3",
    "langchain-openai>=1.1.1",
    "langchain-tavily>=0.2.13",
    "langgraph>=1.0.3",
    "langsmith>=0.4.43",
    "pydantic>=2.7",
    "python-dotenv>=1.2.0",
    "jinja2>=3.1",
    "supabase>=2.9",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pywin32>=306 ; sys_platform == 'win32'",
    "ipykernel>=7.1.0",
]

[project.optional-dependencies]
studio = [
    "langgraph-cli[inmem]>=0.1.55",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agente_noticias"]
